--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
+
   <body class="page__body">
     <header class="header">
       <div class="header__container">
@@ -311,11 +312,13 @@
 
           <div class="explore-online__grid">
             <div class="explore-online__card explore-online__card--1">
-              <img
-                src="./images/photos/Layer3.png"
-                alt="Collection Areas"
-                class="explore-online__photo"
-              >
+              <div class="explore-online__photo-container">
+                <img
+                  src="./images/photos/Layer3.png"
+                  alt="Collection Areas"
+                  class="explore-online__photo"
+                >
+              </div>
 
               <a href="#" class="explore-online__subtitle">
                 Collection Areas
@@ -328,11 +331,13 @@
             </div>
 
             <div class="explore-online__card explore-online__card--2">
-              <img
-                src="./images/photos/Layer2.png"
-                alt="Travel"
-                class="explore-online__photo"
-              >
+              <div class="explore-online__photo-container">
+                <img
+                  src="./images/photos/Layer2.png"
+                  alt="Travel"
+                  class="explore-online__photo"
+                >
+              </div>
 
               <a href="#" class="explore-online__subtitle">
                 Travel
@@ -346,11 +351,13 @@
             </div>
 
             <div class="explore-online__card explore-online__card--3">
-              <img
-                src="./images/photos/Layer1.png"
-                alt="Virtual group tours"
-                class="explore-online__photo"
-              >
+              <div class="explore-online__photo-container">
+                <img
+                  src="./images/photos/Layer1.png"
+                  alt="Virtual group tours"
+                  class="explore-online__photo"
+                >
+              </div>
 
               <a href="#" class="explore-online__subtitle">
                 Virtual group tours
